# BezierCurve

./: .gitignore  BezierCurve.sln  README.md
BezierCurve/: BezierCurve.vcxproj  BezierCurve.vcxproj.filters  CMakeLists.txt  Camera.h  CubicBezier.cpp  CubicBezier.h  CubicBezierPatch.cpp  CubicBezierPatch.h  Grid3D.cpp  Grid3D.h  Light.h  QuadraticBezier.cpp  QuadraticBezier.h  QuadraticBezierPatch.cpp  QuadraticBezierPatch.h  ResourceManager.h  Shader.h  main.cpp  normal.geom  oldglad.c
BezierCurve/Shaders/: bezierPoint.frag  bezierPoint.vert  controlpolygon.frag  controlpolygon.vert  cubicpatch.vert  frenet.frag  frenet.geom  frenet.vert  grid.frag  grid.vert  gridlines.frag  gridlines.geom  gridticks.frag  gridticks.geom  gridticks.vert  linesegment.frag  linesegment.vert  patch.frag  phong.frag  quadraticpatch.tesc  quadraticpatch.tese  quadraticpatch.vert
BezierCurve/glfw-3.3.6/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
BezierCurve/glfw-3.3.6/examples/: INSTALL.vcxproj  INSTALL.vcxproj.filters  boing.vcxproj  boing.vcxproj.filters  cmake_install.cmake  gears.vcxproj  gears.vcxproj.filters  heightmap.vcxproj  heightmap.vcxproj.filters  offscreen.vcxproj  offscreen.vcxproj.filters  particles.vcxproj  particles.vcxproj.filters  sharing.vcxproj  sharing.vcxproj.filters  simple.vcxproj  simple.vcxproj.filters  splitview.vcxproj  splitview.vcxproj.filters  (+2 more)
(+76 files in other folders)
